--- a/MLWeather/MLWeather/WeatherDetail/WeatherDetailViewController.xib
+++ b/MLWeather/MLWeather/WeatherDetail/WeatherDetailViewController.xib
@@ -1,22 +1,108 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="WeatherDetailViewController" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="WeatherDetailViewController" customModule="MLWeather" customModuleProvider="target">
             <connections>
+                <outlet property="cityNameLabel" destination="gaF-qq-wdq" id="CZh-ki-FjK"/>
+                <outlet property="mainAndLowTemperatureLabel" destination="mYN-vu-vaV" id="pOv-ap-TOd"/>
+                <outlet property="temperatureLabel" destination="7de-5o-nJh" id="Pb4-FP-fxZ"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="weatherDescriptionLabel" destination="VQq-th-ng6" id="oR3-fP-XgN"/>
+                <outlet property="weatherIconImageView" destination="GfZ-Lu-TfB" id="EDS-bp-xbs"/>
+                <outlet property="windLabel" destination="Px4-0i-OBu" id="gpQ-5U-PFE"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <subviews>
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KLh-cG-NPJ">
+                    <rect key="frame" x="0.0" y="59" width="393" height="793"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gaF-qq-wdq">
+                            <rect key="frame" x="20" y="30" width="353" height="20.333333333333329"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cloud.sleet.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="GfZ-Lu-TfB">
+                            <rect key="frame" x="76.666666666666686" y="102" width="240" height="130.33333333333331"/>
+                            <color key="tintColor" systemColor="systemTealColor"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="240" id="hgm-jL-QTi"/>
+                                <constraint firstAttribute="height" constant="128" id="vGV-Nn-KTz"/>
+                            </constraints>
+                        </imageView>
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="jQn-4N-4Pl">
+                            <rect key="frame" x="20" y="275.33333333333331" width="353" height="395.99999999999994"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="🌡️" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7de-5o-nJh">
+                                    <rect key="frame" x="0.0" y="0.0" width="353" height="87"/>
+                                    <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VQq-th-ng6">
+                                    <rect key="frame" x="0.0" y="103" width="353" height="87"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="mYN-vu-vaV">
+                                    <rect key="frame" x="0.0" y="206" width="353" height="87"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Px4-0i-OBu">
+                                    <rect key="frame" x="0.0" y="309" width="353" height="87"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                        </stackView>
+                    </subviews>
+                    <constraints>
+                        <constraint firstItem="jQn-4N-4Pl" firstAttribute="top" secondItem="GfZ-Lu-TfB" secondAttribute="bottom" constant="45.000000000000057" id="9dL-rf-aKq"/>
+                        <constraint firstItem="GfZ-Lu-TfB" firstAttribute="top" secondItem="gaF-qq-wdq" secondAttribute="bottom" constant="52" id="FSP-NK-zPM"/>
+                        <constraint firstItem="gaF-qq-wdq" firstAttribute="top" secondItem="KLh-cG-NPJ" secondAttribute="top" constant="30" id="I48-0w-IPt"/>
+                        <constraint firstAttribute="trailing" secondItem="gaF-qq-wdq" secondAttribute="trailing" constant="20" symbolic="YES" id="P6r-ly-SAK"/>
+                        <constraint firstItem="GfZ-Lu-TfB" firstAttribute="centerX" secondItem="gaF-qq-wdq" secondAttribute="centerX" id="PHm-Ic-Fev"/>
+                        <constraint firstItem="gaF-qq-wdq" firstAttribute="leading" secondItem="NXY-ix-IiM" secondAttribute="leading" constant="20" id="PSR-eI-hwh"/>
+                        <constraint firstItem="jQn-4N-4Pl" firstAttribute="trailing" secondItem="gaF-qq-wdq" secondAttribute="trailing" id="fAd-OO-2kh"/>
+                        <constraint firstItem="jQn-4N-4Pl" firstAttribute="leading" secondItem="gaF-qq-wdq" secondAttribute="leading" id="lTM-jX-wEh"/>
+                        <constraint firstAttribute="bottom" secondItem="jQn-4N-4Pl" secondAttribute="bottom" constant="20" id="tp7-QQ-r7a"/>
+                    </constraints>
+                    <viewLayoutGuide key="contentLayoutGuide" id="B2y-Bi-ISH"/>
+                    <viewLayoutGuide key="frameLayoutGuide" id="NXY-ix-IiM"/>
+                </scrollView>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="gaF-qq-wdq" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="3PH-EF-FwF"/>
+                <constraint firstItem="KLh-cG-NPJ" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="8DD-hU-uyj"/>
+                <constraint firstAttribute="bottom" secondItem="KLh-cG-NPJ" secondAttribute="bottom" id="A8M-ef-Z4R"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="gaF-qq-wdq" secondAttribute="trailing" constant="20" id="Z6E-Js-5uh"/>
+                <constraint firstItem="KLh-cG-NPJ" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="etY-El-vl0"/>
+                <constraint firstItem="KLh-cG-NPJ" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="tEK-lB-ZFr"/>
+            </constraints>
+            <point key="canvasLocation" x="136.64122137404578" y="20.422535211267608"/>
         </view>
     </objects>
+    <resources>
+        <image name="cloud.sleet.fill" catalog="system" width="118" height="128"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemTealColor">
+            <color red="0.18823529411764706" green="0.69019607843137254" blue="0.7803921568627451" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
